fixed squished images in internet explorer

--- a/nomnom/static/style.css
+++ b/nomnom/static/style.css
@@ -58,6 +58,7 @@ img {
   display: block;
   width: 100%;
   height: auto;
+    max-height: 35em;
 }
 
 .site-logo {
